<resources>
    <string name="app_name">Board Game Clock</string>
    <string name="app_name_long">Privacy Friendly Board Game Clock</string>
    <string name="app_prefix" translatable="false">Privacy Friendly</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error">Error</string>
    <string name="cancel">Cancel</string>
    <string name="players">Players</string>
    <string name="ok">Okay</string>
    <string name="dialog_no_permissions">Required permissions are not granted!</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_main">Main</string>
    <string name="action_game">Game</string>
    <string name="action_player_management">Player Management</string>
    <string name="action_game_history">Game History</string>
    <string name="action_backup">Backup</string>
    <string name="action_tutorial">Tutorial</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_game">Game</string>
    <string name="game_button_start">New Game</string>
    <string name="game_button_continue">Continue Game</string>
    <string name="action_new_game">New Game</string>
    <string name="action_resume_game">Resume Game</string>
    <string name="choose_players">Choose Players</string>
    <string name="exit">Exit</string>
    <string name="exitQuestion">Do you really want to close the application?</string>
    <string name="game_desc">This is the default main menu for game apps. The viewpager above should be used to switch between game modes.</string>
    <string name="resumeGameErrorToast">No saved games found.</string>
    <string-array name="game_modes">
        <item>Clockwise</item>
        <item>Counter-Clockwise</item>
        <item>Random</item>
        <item>Manual sequence</item>
        <item>Time Tracking</item>
    </string-array>
    <string name="modeClockwise">Clockwise</string>
    <string name="modeCounterClockwise">Counter-Clockwise</string>
    <string name="modeRandom">Random</string>
    <string name="modeChess">Chess</string>
    <string name="gameMode">Game Mode:</string>
    <string name="resetTimeAfterRoundCheck">Reset time after each round?</string>
    <string name="increaseTimeAfterRoundCheck">Increase time after each round?</string>
    <string name="gameName">Game Name:</string>
    <string name="timeDelta">Extra Time:</string>
    <string name="gameNameStandard">Game %d</string>
    <string name="chess_clock">Chess Clock</string>
    <string name="roundTimeLargerInfo">The selected round time has been reduced to equal the selected game time, since round time must not be bigger than game time.</string>
    <string name="round">Round:</string>
    <string name="saveGame">Save Clock</string>
    <string name="withoutSave">Without Saving</string>
    <string name="showResults">Show Results</string>
    <string name="gameTime">Game Time:</string>
    <string name="currentPlayer">Player:</string>
    <string name="save">Save</string>
    <string name="play">Play</string>
    <string name="nextPlayer">Next Player</string>
    <string name="roundTime">Round Time:</string>
    <string name="finishGame">Finish Game</string>
    <string name="quitGame">Quit Game</string>
    <string name="infinite">Infinite</string>
    <string name="pause_capslock" translatable="false">Pause</string>
    <string name="resume">Resume</string>
    <string name="quitGameQuestion">Do you want to save the current clock before leaving?</string>
    <string name="leaveGameQuestion">Do you really want to quit the current game?</string>
    <string name="finishGameQuestion">Do you really want to finish the current game?</string>
    <string name="sureToSaveGameQuestion">Are you sure you want to save the current clock?</string>
    <string name="gameNameSizeError">Please enter a game name to continue.</string>
    <string name="roundTimeSetError">Please set a game time and round time of at least 1 seconds to continue.</string>
    <string name="gameSavedSuccess">Clock saved successfully!</string>
    <string name="swipeDialogQuestion">Swipe Gestures</string>
    <string name="swipeDialogAnswer">Instead of using the button \'Next Player\' you can also swipe for selecting the next player.</string>
    <string name="roundTimeOverDialogHeading">Finish Game</string>
    <string name="roundTimeOverDialogQuestion">The current player ran out of time. Do you want to finish this game or resume with the next player until the current round is over?</string>
    <string name="manualChoiceError">Please select every player from the list!</string>
    <string name="manualChoiceHeading">Set player sequence</string>
    <string name="gameResults">Game Results</string>
    <string name="backToMainMenu">Back to Main Menu</string>
    <string name="backToMainMenuQuestion">Do you really want to go back to the main menu?</string>
    <string name="activeGameTimeHeader">Game Time:</string>
    <string name="playedRoundsHeader">Last Round:</string>
    <string name="playerResults">Player Results:</string>
    <string name="timeLeft">Player\'s time:</string>
    <string name="loadGame">Load Game</string>
    <string name="loadSelectedGame">Load Game</string>
    <string name="pleaseChooseAGame">Please choose a game from the list.</string>
    <string name="errorAtLeastTwoPlayers">Please choose at least two players to continue.</string>
    <string name="startNewGame">Start New Game</string>
    <string name="player_management">Player Management</string>
    <string name="new_player">New Player</string>
    <string name="contact">Contact</string>
    <string name="dialog_choose_new_player">Choose how to create new player:</string>
    <string name="nameDots">Name:</string>
    <string name="picDots">Picture:</string>
    <string name="colorDots">Color:</string>
    <string name="changeColorButton">COLOR</string>
    <string name="takePhotoButton">PHOTO</string>
    <string name="confirm">CONFIRM</string>
    <string name="editPlayer">Edit Player</string>
    <string name="enterAName">Please enter a name.</string>
    <string name="chooseContacts">Choose contacts:</string>
    <string name="contactListIsEmpty">There was no contact found.</string>
    <string name="playerStatistic">Player Statistic</string>
    <string name="playedGames">Games played:</string>
    <string name="completedRounds">Rounds finished:</string>
    <string name="totalTimePlayed">Total Time played:</string>
    <string name="title_activity_game_history">Game History</string>
    <string name="importDatabaseBackup">Import Database Backup</string>
    <string name="importDatabaseBackupInfoMessage">Are you sure you want to import the current database backup from external storage? The active database will be replaced.</string>
    <string name="importDatabaseBackupSuccess">Backup successfully loaded!</string>
    <string name="exportDatabaseBackup">Export Database Backup</string>
    <string name="exportDatabaseBackupInfoMessage">Are you sure you want to create a backup from the active database? The current database backup will be replaced.</string>
    <string name="exportDatabaseBackupSuccess">Backup successfully created at: </string>
    <string name="noBackupFound">No database backup found!</string>
    <string name="backupExportError">Export of database failed!</string>
    <string name="help">Help</string>
    <string name="help_whatis">What is Privacy Friendly Board Game Clock?</string>
    <string name="help_whatis_answer">Privacy Friendly Board Game Clock allows to measure in (round-based) games with any amount of players.</string>
    <string name="help_privacy">What makes the app privacy-friendly?</string>
    <string name="help_privacy_answer">Privacy Friendly Board Game Clock does not require any permission. It further does not include any tracking mechanisms or advertisement.</string>
    <string name="help_new_game">What do the different options in New Game Windows mean?</string>
    <string name="help_new_game_answer"><b>Game Time</b>\nTotal time for a game.\n\n<b>Round Time</b>\nThe time a player has available per round/turn. After this time the turn will be finished automatically.\n\n<b>Extra Time</b>\nThe time a player a player gets credited once a new round starts.</string>
    <string name="help_game_mode">What are the different Game Modes?</string>
    <string name="help_game_mode_answer">"<b>Clockwise</b> The turn order corresponds to the player list and will continue clockwise.  <b>Counter-Clockwise</b> The turn order corresponds to the player list and will continue counter-clockwise.  <b>Random</b> The next player will be selected randomly from the player list.  <b>Manual sequence</b> Players decide for a manual sequence each round.  <b>Chess</b> The turn order corresponds to the player list, no game pause after a round ends.  <b>Time Tracking</b> There is no turn order. Time will be counted up, if a player is touched.     "</string>
    <string name="help_next_player">What is an alternative to the \"Next Player\" Button?</string>
    <string name="help_next_player_answer">Instead of using the button \'Next Player\' you can also swipe for selecting the next player.</string>
    <string name="help_permissions">Which Permissions could be asked for?</string>
    <string name="help_permissions_answer"><b>Read Contacts</b>\nAdditional players can be added based on address book data. If this permission is not granted, this function is not possible and the button "Contacts" at the menu "Player Management" is greyed out.\n\n<b>Read External Storage</b>\nThe app allows to restore saved database backups. If this permission is not granted, this function is not possible and the button "Export Database Backup" is greyed out.\n\n<b>Write External Storage</b>\nApp data can be stored as a database backup on the device. If this permission is not granted, this function is not possible and the button "Import Database Backup" at the menu "Backup" is greyed out.\n\n
    </string>
    <string name="help_add_new_player_feature">Which features are there when adding new players?</string>
    <string name="help_add_new_player_feature_answer">When creating a new player, you can click on the Android Icon to take a custom picture with the camera. You can also click on the color field under the Android Icon to choose a background color for the picture.</string>
    <string name="about">About</string>
    <string name="version_number">Version</string>
    <string name="about_author">Authors: </string>
    <string name="about_author_names" translatable="false">Quang Anh Dang, Marco Bräuning</string>
    <string name="about_author_contributors">and contributors</string>
    <string name="about_affiliation">In affiliation with</string>
    <string name="privacy_friendly">This application belongs to the group of Privacy Friendly Apps developed by Karlsruhe Institute of Technology. Sourcecode licensed under GPLv3. Images copyright KIT and Google Inc.</string>
    <string name="more_info">More information can be found on:</string>
    <string name="github" translatable="false"><a href="https://github.com/SecUSo/privacy-friendly-boardgame-clock/tree/Version-2.0">Github-Repo</a></string>
    <string name="url" translatable="false"><a href="https://www.secuso.org/pfa">SECUSO-Website</a></string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_example_switch">Example Switch</string>
    <string name="pref_example_switch_summary">Example Switch Summary</string>
    <string name="pref_example_summary">Example Summary</string>
    <string name="slide1_heading">Bienvenue!</string>
</resources>