<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_horizontal_margin"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_choose_new_player"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:textSize="20sp"/>

    <Button
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/button_fullwidth"
        android:text="@string/new_player"
        android:id="@+id/button_new_player"
        android:onClick="onClick"/>

    <Button
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/button_disabled"
        android:text="@string/contact"
        android:id="@+id/button_contact"
        android:onClick="onClick"/>

</LinearLayout>