<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_gravity="top">

    <TextView
        android:id="@+id/nameHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/pictureHeading"
        android:layout_marginTop="20dp"
        android:text="@string/nameDots"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/picture"
        android:layout_alignTop="@+id/nameHeading"
        android:layout_marginTop="-15sp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/pictureHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameHeading"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="@dimen/main_button_padding"
        android:layout_marginRight="@dimen/main_button_padding"
        android:layout_marginTop="10dp"
        android:text="@string/picDots"
        android:textSize="15sp" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/picture"
        android:layout_width="@dimen/picSize"
        android:layout_height="@dimen/picSize"
        android:layout_alignTop="@+id/pictureHeading"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_below="@id/editName"
        android:background="@null"
        android:orientation="horizontal"
        android:src="@mipmap/ic_android"/>

    <Button
        android:id="@+id/colorButton"
        android:layout_width="@+id/picture"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/picture"
        android:layout_alignRight="@+id/picture"
        android:layout_below="@+id/picture"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:background="@drawable/button_fullwidth"
        android:orientation="horizontal"
        android:text="@string/changeColorButton"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size" />

    <Button
        android:id="@+id/photoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/picture"
        android:layout_alignRight="@+id/picture"
        android:layout_below="@+id/colorButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:background="@drawable/button_fullwidth"

        android:orientation="horizontal"
        android:text="@string/takePhotoButton"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size" />

    <Button
        android:id="@+id/confirmNewPlayerButtonBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5sp"
        android:layout_marginLeft="@dimen/main_button_padding"
        android:layout_marginRight="@dimen/main_button_padding"
        android:background="@drawable/button_fullwidth"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size"
        android:visibility="gone" />

    <Button
        android:id="@+id/confirmNewPlayerButtonGrey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5sp"
        android:layout_marginLeft="@dimen/main_button_padding"
        android:layout_marginRight="@dimen/main_button_padding"
        android:background="@drawable/button_disabled"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size"
        android:visibility="visible" />

</RelativeLayout>
