<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/show_hint_main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/timePlayedHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/main_button_padding"
            android:layout_marginRight="@dimen/main_button_padding"
            android:layout_marginTop="10dp"
            android:text="@string/activeGameTimeHeader"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/timePlayedText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/timePlayedHeader"
            android:layout_marginLeft="150sp"
            android:layout_marginRight="@dimen/main_button_padding"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/roundsPlayedHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/timePlayedHeader"
            android:layout_marginLeft="@dimen/main_button_padding"
            android:layout_marginRight="@dimen/main_button_padding"
            android:layout_marginTop="10dp"
            android:text="@string/playedRoundsHeader"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/roundsPlayedText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/roundsPlayedHeader"
            android:layout_alignLeft="@+id/timePlayedText"
            android:layout_alignStart="@+id/timePlayedText"
            android:layout_marginRight="@dimen/main_button_padding"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/gameModeHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/roundsPlayedHeader"
            android:layout_marginLeft="@dimen/main_button_padding"
            android:layout_marginRight="@dimen/main_button_padding"
            android:layout_marginTop="10dp"
            android:text="@string/gameMode"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/gameModeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/gameModeHeader"
            android:layout_alignLeft="@+id/timePlayedText"
            android:layout_alignStart="@+id/timePlayedText"
            android:layout_marginRight="@dimen/main_button_padding"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/playerListHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gameModeHeader"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="@dimen/main_button_padding"
            android:layout_marginRight="@dimen/main_button_padding"
            android:layout_marginTop="30dp"
            android:text="@string/playerResults"
            android:textSize="15sp" />

    </RelativeLayout>


    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:listSelector="@android:color/transparent" />

</LinearLayout>
