<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="org.secuso.privacyfriendlyboardgameclock.activities.GameCountDownActivity">

        <include layout="@layout/toolbar"/>

        <LinearLayout
            android:id="@+id/main_content"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="org.secuso.privacyfriendlyboardgameclock.activities.GameCountDownActivity"
            android:orientation="vertical"
            android:weightSum="10"
            style="?android:buttonBarStyle">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/show_hint_main_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/game_current_game_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/main_button_padding"
                    android:layout_marginRight="@dimen/main_button_padding"
                    android:layout_marginTop="10dp"
                    android:text="@string/gameTime"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/game_timer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/game_current_game_time"
                    android:layout_marginLeft="130sp"
                    android:layout_marginRight="@dimen/main_button_padding"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/header_game_current_player_round"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/game_current_game_time"
                    android:layout_marginLeft="@dimen/main_button_padding"
                    android:layout_marginRight="@dimen/main_button_padding"
                    android:layout_marginTop="10sp"
                    android:text="@string/round"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/game_current_player_round"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/header_game_current_player_round"
                    android:layout_alignLeft="@+id/game_timer"
                    android:text="@string/round"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/game_current_player_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/header_game_current_player_round"
                    android:layout_marginLeft="@dimen/main_button_padding"
                    android:layout_marginRight="@dimen/main_button_padding"
                    android:layout_marginTop="10sp"
                    android:text="@string/currentPlayer"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/imageViewIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/game_current_player_header"
                    android:layout_centerHorizontal="true"
                    android:maxHeight="@dimen/icon_max_size"
                    android:maxWidth="@dimen/icon_max_size"
                    android:src="@mipmap/ic_android" />

                <TextView
                    android:id="@+id/game_current_player_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageViewIcon"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="@dimen/main_button_padding"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/round_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/game_current_player_name"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="@dimen/main_button_padding"
                    android:textColor="@color/black"
                    android:textSize="40dp" />

                <Button
                    android:id="@+id/nextPlayerButton"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/main_button_padding"
                    android:layout_marginRight="@dimen/main_button_padding"
                    android:layout_above="@+id/gameButtons"
                    android:background="@drawable/button_fullwidth"
                    android:onClick="nextPlayerButton"
                    android:text="@string/nextPlayer"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/gameButtons"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_alignParentBottom="true"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/saveGameButton"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_fullwidth"
                        android:onClick="saveGameButton"
                        android:src="@drawable/ic_assignment_returned"
                        android:text=""
                        android:textSize="@dimen/text_size"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/gamePlayPauseButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="@drawable/button_fullwidth"
                        android:onClick="gamePlayPauseButton"
                        android:text="@string/play"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size" />

                    <ImageButton
                        android:id="@+id/finishGameButton"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_fullwidth"
                        android:onClick="finishGameButton"
                        android:src="@drawable/ic_exit_to_app"
                        android:visibility="gone" />
                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />

</android.support.v4.widget.DrawerLayout>